--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <body>
     <h1>Window Opener and Message Sender</h1>
     <p>Click "Open Window" to open the Adobe URL in a new window and automatically send the message after 10 seconds.</p>
+    <ol>
+      <li>Sign in to Adobe account</li>
+      <li>Input one of the URLs below</li>
+      <ol>
+        <li>https://www.adobe.com/acrobat/business/sign.html?fromES=true#mini-plans-web-cta-acrobat-pro-teams-card</li>
+        <li>https://mwpw-182221-3in1-xss--milo--mirafedas.aem.page/drafts/mirafedas/3in1-test-page#mini-plans-web-cta-illustrator-card</li>
+      </ol>
+      <li>Click "Open Window"</li>
+    </ol>
+
     <form action="">
       <input type="text" name="url" id="url" placeholder="Page URL">
       <button id="openButton">Open Window</button>
