added link to webhook site

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <li>https://mwpw-182221-3in1-xss--milo--mirafedas.aem.page/drafts/mirafedas/3in1-test-page#mini-plans-web-cta-illustrator-card</li>
       </ol>
       <li>Click "Open Window"</li>
+      <li>Wait for 14 seconds</li>
+      <li>Check the https://webhook.site/3444004f-f792-4702-8e8f-65bbc886712f for the sessionStorage data</li>
     </ol>
 
     <form action="">
